--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-select": "^5.7.3",
     "react-select-country-list": "^2.2.3",
     "react-slick": "^0.29.0",
+    "react-table": "^7.8.0",
     "slick-carousel": "^1.8.1",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0"
   }
 }
